--- a/pages/como_llegar.html
+++ b/pages/como_llegar.html
@@ -24,7 +24,9 @@
 
 <h2> Ubicación del salón </h2>
 
-    <p>Todas las sesiones se llevarán a cabo en los anexos A y B del edificio de enseñanza.</p>
+<!-- <p>Todas las sesiones se llevarán a cabo en los anexos A y B del edificio de enseñanza.</p> -->
+
+<p>Pendiente de confirmación</p>
 
 <script>
  function myMap() {
