--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,14 @@
 
 
 <center>
-        <h1> Soporte y Sugerencias </h1>
+        <h1> Contacto </h1>
+
+        Hospital Infantil de México Federico Gómez. <br/>
+        Torre de Hemato-Oncología e Investigación. <br/>
+        Calle Dr. Márquez 162, Delegación Cuauhtémoc. <br/>
+        06720, Ciudad de México, México.
+ 
+
 
         <div class="row" style="margin-top: 1em;">
             <div class="col-md-12">
@@ -33,14 +40,10 @@
 
 
 <center>
-        <h1> Organizadores </h1>
-        <h3> Unidad de Investigación en Biología Computacional y Diseño de Fármacos </h3>
+        <h1> Comité </h1>
+        <h4> Unidad de Investigación en Biología Computacional y Diseño de Fármacos </h4>
 
-        Hospital Infantil de México Federico Gómez. <br/>
-        Torre de Hemato-Oncología e Investigación. <br/>
-        Calle Dr. Márquez 162, Delegación Cuauhtémoc. <br/>
-        06720, Ciudad de México, México.
-        <div class="row" style="margin-top: 1em;">
+        <div class="row" style="margin-top: 1em;margin-bottom: 4em">
             <div class="col-md-12">
                 <center>
                     <i class="fa fa-twitter fa-2x" aria-hidden="true" style="margin-right: 6px"></i>
@@ -59,7 +62,7 @@
         <div class="row" style="margin-top: 1em;">
 
             <div class="col-md-6">
-                <h3>Dra. Liliana M. Moreno Vargas</h3>
+                <h4>Dra. Liliana M. Moreno Vargas</h4>
                 <div class="row" style="margin-top: 1em;margin-bottom: 4em">
                     <div class="col-md-12">
                         <center>
@@ -76,7 +79,7 @@
             </div>
 
             <div class="col-md-6">
-                <h3>Dr. Diego Prada Gracia</h3>
+                <h4>Dr. Diego Prada Gracia</h4>
                 <div class="row" style="margin-top: 1em;margin-bottom: 4em">
                     <div class="col-md-12">
                         <center>
