--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
 <center>
 <h1>
     <b>Workshop</b>
-    <b>Drug Design and Discovery México</b>
+    <b>Drug Design and Discovery - México</b>
 </h1>
 <h2>
     Impulsando la vinculación
