programa en su última versión

--- a/pages/programa.html
+++ b/pages/programa.html
@@ -33,48 +33,55 @@
         <td>Apertura</td>
         <td><strong>Apertura y bienvenida</strong><br />
             Dr. Diego Prada Gracia.<br />
-            Unidad de Investigación en Biología Computacional y Diseño de Fármacos.<br />
-            Hospital Infantil de México Federico Gómez</td>
+            <i> Unidad de Investigación en Biología Computacional y Diseño de Fármacos.<br />
+                Hospital Infantil de México Federico Gómez</i></td>
       </tr>
 
       <tr>
-        <td>9.20-10.05</td>
+        <td>9.15-10.00</td>
         <td>Conferencia Invitada</td>
-        <td><strong>TBA.</strong><br />
+        <td><strong>Protein-protein interactions in the membrane: a pharmacological target.</strong><br />
             Dr. Rachid Charbel Maroun. <br />
-            Université Evry Val d'Essonne (París, Francia)</td>
+            <i>Structure-Activité des Biomolécules Normales et Pathologiques. <br />
+                UMR INSERM U1204/UEVE. Université Evry Val d'Essonne. Francia.</i></td>
       </tr>
 
       <tr>
         <td>10.10-10.55</td>
         <td>Conferencia 1</td>
         <td><strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br />
-            Dr. Lenin Domínguez, UDLAP.</td>
+            Dr. Lenin Domínguez.<br />
+            <i>Ciencias Químico Biológicas.<br />
+                Universidad Autónoma del Estado de Morelos.</i></td>
       </tr>
 
       <tr>
-        <td>11.00-11.20</td>
+        <td>10.55-11.15</td>
         <td>Receso para el café</td>
         <td></td>
       </tr>
 
       <tr>
-        <td>11.20-12.05</td>
+        <td>11.15-12.00</td>
         <td>Conferencia 2</td>
         <td><strong>Applications of chemoinformatics and molecular modeling for epigenetic drug discovery.</strong><br />
-            Dr. José Luis Medina Franco. UNAM.</td>
+            Dr. José Luis Medina Franco.<br />
+            <i>Laboratorio DIFACQUIM: Diseño de Fármacos Asistido por Computadora.<br />
+                Facultad de Química, Universidad Nacional Autonoma de México.</i></td>
      </tr>
 
       <tr>
         <td>12.10-12.55</td>
         <td>Conferencia 3</td>
-        <td><strong>La proteína de unión a cajas TATA (TBP) como blanco para atacar parásitos y vectores deteniendo la transcripción.</strong><br />
-            Dra. Nina Pastor Colón, UAEM.</td>
+        <td><strong>The TATA binding protein (TBP) as a target to attack parasites and vectors by stopping transcription.</strong><br />
+            Dra. Nina Pastor Colón.<br />
+            <i>Centro de Investigación en Dinámica Celular.<br />
+                Universidad Autónoma del Estado de Morelos.</i></td>
 
       </tr>
 
       <tr>
-        <td>12.50-14.20</td>
+        <td>12.55-14.20</td>
         <td>Comida</td>
         <td></td>
       </tr>
@@ -83,26 +90,32 @@
         <td>14.20-15.05</td>
         <td>Conferencia 4</td>
         <td><strong>Toxicología computacional en el ámbito regulatorio.</strong><br />
-            Dra. Karina Martínez Mayorga, UNAM.</td>
-      </tr>
-      
-      <tr>
-        <td>15.10-15.55</td>
-        <td>Conferencia 5</td>
-        <td><strong>Microcalorimetry: A versatile tool for understanding biomolecular interactions and an aid to drug design.</strong><br />
-            Dr. Raúl Medina Pacheco, MALVERN (Londres, Inglaterra)</td>
+            Dra. Karina Martínez Mayorga.<br />
+            <i>Martínez-Mayorga Lab: Computational Chemical Biology.<br />
+                Instituto de Química, UNAM.</i></td>
       </tr>
 
       <tr>
-          <td>16.00-17.30</td>
+        <td>15.15-16.00</td>
+        <td>Conferencia 5</td>
+        <td><strong>Microcalorimetry as a tool for understanding biomolecular interactions and an aid to drug design.</strong><br />
+            Dr. Raúl Medina Pacheco. <br />
+            <i>Malvern Instruments Limited <br />
+                Application Scientist - Malvern Instruments, UK.</i></td>
+      </tr>
+
+      <tr>
+          <td>16.10-17.30</td>
         <td>Coloquio</td>
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br />
             <br />
             Participantes:<br />
-            Dr. Juan Pablo Senosiain, Laboratorios SENOSIAIN.<br />
-            Dr. Jorge González Canudas, Laboratorios SILANES.<br />
-            Otros laboratorios por confirmar.<br />
+            <strong>
+                Dr. Juan Pablo Senosiain, Laboratorios Senosiain.<br />
+                Dr. Jorge González Canudas, Laboratorios Silanes.<br />
+                Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br />
+            </strong>
             <br />
         Durante el coloquio se procurarán abordar, entre otras, las siguientes cuestiones:<br />
         - ¿Qué tipo de proyectos es pertinente desarrollar en México con la perspectiva de ser trasladados?<br />
@@ -110,12 +123,12 @@
         - ¿Es posible diseñar y trasladar una nueva molécula en México?<br />
         - ¿Qué perfiles profesionales de pre y posgrado necesitan desarrollarse desde las universidades e institutos que aporten valor a las empresas interesadas en el diseño y optimización de ligandos con potencial biotecnológico?<br />
         - ¿Qué dinámicas de colaboración pueden establecer la universidad y los institutos de salud con la industria en el campo del diseño y optimización de ligandos con potencial biotecnológico?<br />
-        - ¿Qué mecanismos de apoyo y financiación alternos se podrían poner en marcha para apoyar la formación de profesionales y el desarrollo proyectos en universidades y institutos?<br />
+        - ¿Qué mecanismos de apoyo y financiación alternos se podrían poner en marcha para apoyar la formación de profesionales y el desarrollo proyectos en universidades e institutos?<br />
         </td>
       </tr>
 
       <tr>
-        <td>17.30-18.30</td>
+        <td>17.40-18.25</td>
         <td>Turno de participación abierta</td>
         <td>
             <strong>Propuestas, conclusiones y clausura.</strong><br />
@@ -129,27 +142,15 @@
       </tr>
 
       <tr>
-          <td>19.00-21.30</td>
-          <td>Evento Social</td>
-        <td>Socialización en bar o restaurante.</td>
+          <td>18.30</td>
+          <td>Brindis de clausura</td>
       </tr>
 
     </tbody>
   </table>
 
 
-
-
-
-
-
-
-
-
-
-
 </div>
-
 
 </center>
 
