programa en su última versión

--- a/pages/programa.html
+++ b/pages/programa.html
@@ -20,9 +20,6 @@
 <hr>
 
 
-
-
-
 <div class="table-responsive">
 
   <table class="table table-striped">
@@ -30,8 +27,8 @@
 
       <tr>
         <td>9.00-9.15</td>
-        <td>Apertura</td>
-        <td><strong>Apertura y bienvenida</strong><br />
+        <td>Apertura y bienvenida</td>
+        <td><strong>How Mexican researchers can contribute to the discovery and/or development of molecular solutions?</strong><br />
             Dr. Diego Prada Gracia.<br />
             <i> Unidad de Investigación en Biología Computacional y Diseño de Fármacos.<br />
                 Hospital Infantil de México Federico Gómez</i></td>
