--- a/pages/invitados.html
+++ b/pages/invitados.html
@@ -38,8 +38,9 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Rachid Charbel Maroun </h3>
-                            <h5> Université Evry Val d'Essone (París, Francia).</h5>
+                            <h3> Dr. Rachid Charbel Maroun.</h3>
+                            <h5> Structure-Activité des Biomolécules Normales et Pathologiques.</h5>
+                            <h5> UMR INSERM U1204/UEVE. Université Evry Val d'Essonne. Francia.</h5>
                         </center>
                     </div>
                 </div>
@@ -60,8 +61,9 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Lenin Domínguez Ramírez </h3>
-                            <h5> UDLAP.</h5>
+                            <h3> Dr. Lenin Domínguez Ramírez</h3>
+                            <h5> Ciencias Químico Biológicas.</h5>
+                            <h5> Universidad Autónoma del Estado de Morelos.</h5>
                         </center>
                     </div>
                 </div>
@@ -83,7 +85,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dr. José Luis Medina Franco </h3>
-                            <h5> UNAM.</h5>
+                            <h5> Laboratorio DIFACQUIM: Diseño de Fármacos Asistido por Computadora.</h5>
+                            <h5> Facultad de Química, Universidad Nacional Autonoma de México.</h5>
                         </center>
                     </div>
                 </div>
@@ -104,8 +107,9 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dra. Nina Pastor Colón </h3>
-                            <h5> UAEM.</h5>
+                            <h3> Dra. Nina Pastor Colón</h3>
+                            <h5> Centro de Investigación en Dinámica Celular.</h5>
+                            <h5> Universidad Autónoma del Estado de Morelos.</h5>
                         </center>
                     </div>
                 </div>
@@ -127,7 +131,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dra. Karina Martínez Mayorga </h3>
-                            <h5> UNAM.</h5>
+                            <h5> Martínez-Mayorga Lab: Computational Chemical Biology.</h5>
+                            <h5> Instituto de Química, Universidad Nacional Autónoma de México.</h5>
                         </center>
                     </div>
                 </div>
@@ -149,7 +154,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dr. Raúl Medina Pacheco </h3>
-                            <h5> MALVERN (Londres, Inglaterra)</h5>
+                            <h5> Application Scientist - Malvern Instruments</h5>
+                            <h5> Malvern Instruments Limited UK</h5>
                         </center>
                     </div>
                 </div>
@@ -171,7 +177,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dr. Juan Pablo Senosiain Peláez</h3>
-                            <h5> Laboratorios SENOSIAIN </h5>
+                            <h5> New Projects Manager</h5>
+                            <h5> Laboratorios Senosiain </h5>
                         </center>
                     </div>
                 </div>
@@ -194,7 +201,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dr. Jorge González Canudas</h3>
-                            <h5> Laboratorios SILANES </h5>
+                            <h5> Director Científico </h5>
+                            <h5> Laboratorios Silanes </h5>
                         </center>
                     </div>
                 </div>
@@ -215,17 +223,14 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Pendiente de confirmación </h3>
-                            <h5> ... </h5>
+                            <h3>Dr. Sergio Valentinotti Marelli</h3>
+                            <h5>Director Life Sciences</h5>
+                            <h5>Laboratorios Liomont</h5>
                         </center>
                     </div>
                 </div>
             </div>
         </div>
-
-
-
-
 
     </div>
 </div>
