--- a/pages/programa.html
+++ b/pages/programa.html
@@ -47,7 +47,7 @@
         <td>10.10-10.55</td>
         <td>Conferencia 1</td>
         <td><strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br />
-            Dr. Lenin Domínguez.<br />
+            Dr. Lenin Domínguez Ramírez.<br />
             <i>Ciencias Químico Biológicas.<br />
                 Universidad Autónoma del Estado de Morelos.</i></td>
       </tr>
@@ -89,7 +89,7 @@
         <td><strong>Toxicología computacional en el ámbito regulatorio.</strong><br />
             Dra. Karina Martínez Mayorga.<br />
             <i>Martínez-Mayorga Lab: Computational Chemical Biology.<br />
-                Instituto de Química, UNAM.</i></td>
+                Instituto de Química, Universidad Nacional Autónoma de México.</i></td>
       </tr>
 
       <tr>
