Nikola auto commit.
Source commit: d307df8fbae387109b811123708b2274131a0fe7
Nikola version: 7.8.9

--- a/invitados/index.html
+++ b/invitados/index.html
@@ -122,8 +122,9 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Rachid Charbel Maroun </h3>
-                            <h5> Université Evry Val d'Essone (París, Francia).</h5>
+                            <h3> Dr. Rachid Charbel Maroun.</h3>
+                            <h5> Structure-Activité des Biomolécules Normales et Pathologiques.</h5>
+                            <h5> UMR INSERM U1204/UEVE. Université Evry Val d'Essonne. Francia.</h5>
                         </center>
                     </div>
                 </div>
@@ -144,8 +145,9 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Lenin Domínguez Ramírez </h3>
-                            <h5> UDLAP.</h5>
+                            <h3> Dr. Lenin Domínguez Ramírez</h3>
+                            <h5> Ciencias Químico Biológicas.</h5>
+                            <h5> Universidad Autónoma del Estado de Morelos.</h5>
                         </center>
                     </div>
                 </div>
@@ -167,7 +169,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dr. José Luis Medina Franco </h3>
-                            <h5> UNAM.</h5>
+                            <h5> Laboratorio DIFACQUIM: Diseño de Fármacos Asistido por Computadora.</h5>
+                            <h5> Facultad de Química, Universidad Nacional Autonoma de México.</h5>
                         </center>
                     </div>
                 </div>
@@ -188,8 +191,9 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dra. Nina Pastor Colón </h3>
-                            <h5> UAEM.</h5>
+                            <h3> Dra. Nina Pastor Colón</h3>
+                            <h5> Centro de Investigación en Dinámica Celular.</h5>
+                            <h5> Universidad Autónoma del Estado de Morelos.</h5>
                         </center>
                     </div>
                 </div>
@@ -211,7 +215,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dra. Karina Martínez Mayorga </h3>
-                            <h5> UNAM.</h5>
+                            <h5> Martínez-Mayorga Lab: Computational Chemical Biology.</h5>
+                            <h5> Instituto de Química, Universidad Nacional Autónoma de México.</h5>
                         </center>
                     </div>
                 </div>
@@ -233,7 +238,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dr. Raúl Medina Pacheco </h3>
-                            <h5> MALVERN (Londres, Inglaterra)</h5>
+                            <h5> Application Scientist - Malvern Instruments</h5>
+                            <h5> Malvern Instruments Limited UK</h5>
                         </center>
                     </div>
                 </div>
@@ -255,7 +261,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dr. Juan Pablo Senosiain Peláez</h3>
-                            <h5> Laboratorios SENOSIAIN </h5>
+                            <h5> New Projects Manager</h5>
+                            <h5> Laboratorios Senosiain </h5>
                         </center>
                     </div>
                 </div>
@@ -278,7 +285,8 @@ En orden de aparición
                     <div class="panel-body">
                         <center>
                             <h3> Dr. Jorge González Canudas</h3>
-                            <h5> Laboratorios SILANES </h5>
+                            <h5> Director Científico </h5>
+                            <h5> Laboratorios Silanes </h5>
                         </center>
                     </div>
                 </div>
@@ -299,17 +307,14 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Pendiente de confirmación </h3>
-                            <h5> ... </h5>
+                            <h3>Dr. Sergio Valentinotti Marelli</h3>
+                            <h5>Director Life Sciences</h5>
+                            <h5>Laboratorios Liomont</h5>
                         </center>
                     </div>
                 </div>
             </div>
         </div>
-
-
-
-
 
     </div>
 </div>
