--- a/programa/index.html
+++ b/programa/index.html
@@ -126,7 +126,7 @@
         <td>Conferencia 1</td>
         <td>
 <strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br>
-            Dr. Lenin Domínguez.<br><i>Ciencias Químico Biológicas.<br>
+            Dr. Lenin Domínguez Ramírez.<br><i>Ciencias Químico Biológicas.<br>
                 Universidad Autónoma del Estado de Morelos.</i>
 </td>
       </tr>
@@ -165,7 +165,7 @@
         <td>
 <strong>Toxicología computacional en el ámbito regulatorio.</strong><br>
             Dra. Karina Martínez Mayorga.<br><i>Martínez-Mayorga Lab: Computational Chemical Biology.<br>
-                Instituto de Química, UNAM.</i>
+                Instituto de Química, Universidad Nacional Autónoma de México.</i>
 </td>
       </tr>
 <tr>
