corrección del título de karina al ingles

--- a/pages/programa.html
+++ b/pages/programa.html
@@ -86,7 +86,7 @@
       <tr>
         <td>14.20-15.05</td>
         <td>Conferencia 4</td>
-        <td><strong>Toxicología computacional en el ámbito regulatorio.</strong><br />
+        <td><strong>Computational Toxicology: Risk Assessment for Pharmaceutical and Environmental Chemicals</strong><br />
             Dra. Karina Martínez Mayorga.<br />
             <i>Martínez-Mayorga Lab: Computational Chemical Biology.<br />
                 Instituto de Química, Universidad Nacional Autónoma de México.</i></td>
