Corrección apellidos Raul

--- a/pages/programa.html
+++ b/pages/programa.html
@@ -96,7 +96,7 @@
         <td>15.15-16.00</td>
         <td>Conferencia 5</td>
         <td><strong>Microcalorimetry as a tool for understanding biomolecular interactions and an aid to drug design.</strong><br />
-            Dr. Raúl Medina Pacheco. <br />
+            Dr. Raúl Pacheco Gómez. <br />
             <i>Malvern Instruments Limited <br />
                 Application Scientist - Malvern Instruments, UK.</i></td>
       </tr>
