--- a/pages/invitados/index.html
+++ b/pages/invitados/index.html
@@ -154,7 +154,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Raúl Medina Pacheco </h3>
+                            <h3> Dr. Raúl Pacheco Gómez </h3>
                             <h5> Application Scientist - Malvern Instruments</h5>
                             <h5> Malvern Instruments Limited UK</h5>
                         </center>
