Nikola auto commit.
Source commit: df251b0f3a28dd434ce263bb73feb6b369053485
Nikola version: 7.8.9

--- a/programa/index.html
+++ b/programa/index.html
@@ -173,7 +173,7 @@
         <td>Conferencia 5</td>
         <td>
 <strong>Microcalorimetry as a tool for understanding biomolecular interactions and an aid to drug design.</strong><br>
-            Dr. Raúl Medina Pacheco. <br><i>Malvern Instruments Limited <br>
+            Dr. Raúl Pacheco Gómez. <br><i>Malvern Instruments Limited <br>
                 Application Scientist - Malvern Instruments, UK.</i>
 </td>
       </tr>
