--- a/pages/programa.html
+++ b/pages/programa.html
@@ -49,7 +49,7 @@
         <td><strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br />
             Dr. Lenin Domínguez Ramírez.<br />
             <i>Ciencias Químico Biológicas.<br />
-                Universidad Autónoma del Estado de Morelos.</i></td>
+                Universidad de las Américas Puebla.</i></td>
       </tr>
 
       <tr>
