Nikola auto commit.
Source commit: a516479c7c526a013eccbf6662904c5d8393a4ff
Nikola version: 7.8.9

--- a/programa/index.html
+++ b/programa/index.html
@@ -127,7 +127,7 @@
         <td>
 <strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br>
             Dr. Lenin Domínguez Ramírez.<br><i>Ciencias Químico Biológicas.<br>
-                Universidad Autónoma del Estado de Morelos.</i>
+                Universidad de las Américas Puebla.</i>
 </td>
       </tr>
 <tr>
