Modificaciones del día antes de hacerlo público

--- a/pages/index.html
+++ b/pages/index.html
@@ -40,50 +40,73 @@
 </a>
 </div>
 
-<div class="row">
-    <div class="md-2" style="margin-top: 4em; margin-bottom: 4em;">
-        <img class='img-responsive' src="galleries/Logo_HIMFG.jpg" style="width:30%;">
-    </div>
-    <div class="md-2">
-        <img class='img-responsive' src="galleries/Logo_UIBCDF.png" style="width:30%;">
-    </div>
+<div class="md-2" style="margin-top: 1em; margin-bottom: 1em;">
+
+    <a href="http://himfg.com.mx/" style="color:inherit; text-decoration:none" >
+        <img class='img-responsive' src="galleries/Logo_HIMFG.jpg" style="width:20%;">
+    </a>
 </div>
 
 
-<div class="row" style="margin-top: 10em; margin-bottom: 2em;">
-    <div class="col-md-6" style="min-height: 700px;">
-        <!-- <iframe src="/blog?layout=embedded" style=".nav { display: none!important;}" frameborder="0" width="500" height="700"></iframe> -->
-
-        <a href="/blog/">
-            <h2>
-                <b>Blog</b>
-            </h2>
-            <hr />
-        </a>
-        <a href="/blog/workshop-directo-streaming/">
-            <h4 style="text-align:justify;">
-                El workshop se podrá seguir en directo por streaming gracias a CEMESATEL
-            </h4>
-        </a>
-        <a href="/blog/preguntas-twitter/">
-            <h4 style="text-align:justify;">
-                Toma el micrófono desde tu laboratorio haciendo uso del hashtag #d3mexico
-            </h4>
-        </a>
+<div class="row" style="margin-top: 2em; margin-bottom: 2em;">
+<h4>
+    Si no puedes venir <a href="/blog/workshop-directo-streaming/">sigue el workshop en streaming</a> gracias a <a href="http://cemesatel.tv/">CEMESATEL</a><br />
+    y <a href="/blog/preguntas-twitter/">toma el micrófono de la sala</a> usando el hashtag <a href="https://twitter.com/search?q=%23d3mexico&ref_src=twsrc%5Etfw&ref_url=http%3A%2F%2Fwww.d3mexico.org%2F">#d3mexico en twitter</a>. <br />
+    <strong>¡Estate atento!</strong> Publicaremos aquí mismo el enlace.
+</h4>
+</div>
 
 
+
+<div class="row" style="margin-top: 2em; margin-bottom: 2em;">
+<a href="/documentacion/brochure.pdf">
+<h2>
+    <b>Brochure oficial del workshop</b><br />
+</h2>
+<h4>
+    Descárgalo aquí.
+</h4>
+</a>
+</div>
+
+
+<hr />
+
+<div class="row" style="margin-top: 4em; margin-bottom: 4em;">
+    <div class="col-md-6" style="min-height: 1000px;">
+        <h2>
+            <a href="/blog/">
+                <b>BLOG</b>
+            </a> / Últimos posts
+        </h2>
+        <hr />
+        <div style="overflow: hidden; left: 0px; top: 0px; width:100%;">
+            <div style="overflow: hidden; margin-top: -90px;">
+            </div>
+            <iframe src="blog?layout=embedded" style=".nav { display: none; }" frameborder="0" height="1000" width="100%"></iframe>
+        </div>
     </div>
-    <div class="col-md-6" style="min-height: 700px;">
-                    <a class="twitter-timeline"  href="https://twitter.com/hashtag/d3mexico" data-widget-id="956918407382945797">#d3mexico Tweets</a>
+    <div class="col-md-6" height="1000" width="100%">
+                    <a class="twitter-timeline"  href="https://twitter.com/hashtag/d3mexico" data-widget-id="956918407382945797" data-height="1000">#d3mexico Tweets</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           
         <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 </div>
 
-
+<hr />
+<h1><strong>Organizan</strong></h1>
+<div class="row">
+    <div class="col-md-6" style="margin-top: 4em; margin-bottom: 4em;">
+        <a href="http://himfg.com.mx/" style="color:inherit; text-decoration:none" >
+            <img class='img-responsive' src="galleries/Logo_HIMFG.jpg" style="width:40%;">
+        </a>
+    </div>
+    <div class="col-md-6" style="margin-top: 8em; margin-bottom: 4em;">
+        <a href="http://www.uibcdf.org/" style="color:inherit; text-decoration:none" >
+            <img class='img-responsive' src="galleries/Logo_UIBCDF.png" style="width:60%;">
+        </a>
+    </div>
+</div>
 
 </center>
-
-
-
