--- a/pages/invitados/medina-franco.html
+++ b/pages/invitados/medina-franco.html
@@ -50,6 +50,9 @@ revistas indizadas, 18 capítulos en libros, una patente internacional y editado
 libros Epi-Informatics (Elsevier) y Foodinformatics (Springer). Es Editor Asociado de la revista RSC
 Advances (Royal Society of Chemistry). En octubre de 2017, fue admitido como Fellow en la Royal
                                 Society of Chemistry del Reino Unido.</p>
+                            <p style="text-align:justify">
+                                Más información sobre el perfil profesional de José Luis Medina Franco puede ser encontrada en su <a href="/CVs/cv-medina-franco.pdf">curriculum vitae</a>.
+                            </p>
                                 <hr/>
                                 <h3> Distinciones </h3>
                                 <ul style="text-align:left; padding:0cm 3cm 0cm ">
