--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -1,6 +1,6 @@
 <!--
-     .. title: Programa
-     .. slug: programa
+     .. title:
+     .. slug: index
      .. date: 2018-01-19 19:19:17 UTC-06:00
      .. tags: 
      .. category: 
@@ -37,10 +37,11 @@
       <tr>
         <td>9.15-10.00</td>
         <td>Conferencia Invitada</td>
-        <td><strong>Protein-protein interactions in the membrane: a pharmacological target.</strong><br />
+        <td><strong>Protein-protein interactions in the membrane: a pharmacological target.</strong> [<a href="/programa/charbel-maroun/">Abstract</a>]<br />
+            <a href="/invitados/charbel-maroun/">
             Dr. Rachid Charbel Maroun. <br />
             <i>Structure-Activité des Biomolécules Normales et Pathologiques. <br />
-                UMR INSERM U1204/UEVE. Université Evry Val d'Essonne. Francia.</i></td>
+                UMR INSERM U1204/UEVE. Université Evry Val d'Essonne/Université Paris-Saclay. Francia.</i></a></td>
       </tr>
 
       <tr>
@@ -62,9 +63,10 @@
         <td>11.15-12.00</td>
         <td>Conferencia 2</td>
         <td><strong>Applications of chemoinformatics and molecular modeling for epigenetic drug discovery.</strong><br />
+            <a href="/invitados/medina-franco/">
             Dr. José Luis Medina Franco.<br />
             <i>Laboratorio DIFACQUIM: Diseño de Fármacos Asistido por Computadora.<br />
-                Facultad de Química, Universidad Nacional Autonoma de México.</i></td>
+                Facultad de Química, Universidad Nacional Autonoma de México.</i></a></td>
      </tr>
 
       <tr>
@@ -87,9 +89,10 @@
         <td>14.20-15.05</td>
         <td>Conferencia 4</td>
         <td><strong>Computational Toxicology: Risk Assessment for Pharmaceutical and Environmental Chemicals</strong><br />
+            <a href="/invitados/martinez-mayorga/">
             Dra. Karina Martínez Mayorga.<br />
             <i>Martínez-Mayorga Lab: Computational Chemical Biology.<br />
-                Instituto de Química, Universidad Nacional Autónoma de México.</i></td>
+                Instituto de Química, Universidad Nacional Autónoma de México.</i></td></a>
       </tr>
 
       <tr>
@@ -109,7 +112,8 @@
             <br />
             Participantes:<br />
             <strong>
-                Dr. Juan Pablo Senosiain, Laboratorios Senosiain.<br />
+            <a href="/invitados/senosiain-pelaez/">
+                Dr. Juan Pablo Senosiain, Laboratorios Senosiain.</a><br />
                 Dr. Jorge González Canudas, Laboratorios Silanes.<br />
                 Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br />
             </strong>
