--- a/pages/invitados/index.html
+++ b/pages/invitados/index.html
@@ -29,7 +29,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="/images/icon_person.png", style="height:180px;">
+                            <img src="/images/invitados/charbel-maroun.png", style="height:180px;">
                         </center>
                     </div>
                 </div>
@@ -38,9 +38,10 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <h3> Dr. Rachid Charbel Maroun.</h3>
-                            <h5> Structure-Activité des Biomolécules Normales et Pathologiques.</h5>
-                            <h5> UMR INSERM U1204/UEVE. Université Evry Val d'Essonne. Francia.</h5>
+                            <h3> Dr. Rachid Charbel Maroun</h3>
+                            <h5> <a href="https://www.universite-paris-saclay.fr/en/research/laboratory/structure-activite-des-biomolecules-normales-et-pathologiques-sabnp"> Structure-Activité des Biomolécules Normales et Pathologiques.</a></h5>
+                            <h5> UMR INSERM U1204/UEVE. Université Evry Val d'Essonne - Université Paris-Saclay. Francia.</h5>
+                            <h5> <i> <a href="/invitados/charbel-maroun/"> Semblanza Curricular </a></i></h5>
                         </center>
                     </div>
                 </div>
@@ -122,7 +123,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="/images/icon_person.png", style="height:180px;">
+                            <img src="/images/invitados/martinez-mayorga.png", style="height:180px;">
                         </center>
                     </div>
                 </div>
@@ -134,6 +135,7 @@ En orden de aparición
                             <h3> Dra. Karina Martínez Mayorga </h3>
                             <h5> Martínez-Mayorga Lab: Computational Chemical Biology.</h5>
                             <h5> Instituto de Química, Universidad Nacional Autónoma de México.</h5>
+                            <h5> <i> <a href="/invitados/martinez-mayorga/"> Semblanza Curricular </a></i></h5>
                         </center>
                     </div>
                 </div>
@@ -168,7 +170,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="/images/icon_person.png", style="height:180px;">
+                            <img src="/images/invitados/senosiain-pelaez.png", style="height:180px;">
                         </center>
                     </div>
                 </div>
@@ -179,7 +181,8 @@ En orden de aparición
                         <center>
                             <h3> Dr. Juan Pablo Senosiain Peláez</h3>
                             <h5> New Projects Manager</h5>
-                            <h5> Laboratorios Senosiain </h5>
+                            <h5> <a href="http://www.senosiain.com.mx/">Laboratorios Senosiain </a></h5>
+                            <h5> <i> <a href="/invitados/senosiain-pelaez/"> Semblanza Curricular </a></i></h5>
                         </center>
                     </div>
                 </div>
