Nikola auto commit.
Source commit: 55d2d0f6234ccde1435e48c977794cb4cbbad564
Nikola version: 7.8.9

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div class="row" style="margin-top: 2em; margin-bottom: 2em;">
 <a href="registro/">
 <h1>
-    <b>¡Registrate ya!</b><br>
+    <b>¡Regístrate ya!</b><br>
 </h1>
 <h3>
     La asistencia es gratuita.
