afiliación lennin en invitados

--- a/pages/invitados/index.html
+++ b/pages/invitados/index.html
@@ -64,7 +64,7 @@ En orden de aparición
                         <center>
                             <h3> Dr. Lenin Domínguez Ramírez</h3>
                             <h5> Ciencias Químico Biológicas.</h5>
-                            <h5> Universidad Autónoma del Estado de Morelos.</h5>
+                            <h5> Universidad de las Américas Puebla.</h5>
                         </center>
                     </div>
                 </div>
