--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -48,9 +48,10 @@
         <td>10.10-10.55</td>
         <td>Conferencia 1</td>
         <td><strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br />
+            <a href="/invitados/dominguez-ramirez/">
             Dr. Lenin Domínguez Ramírez.<br />
             <i>Ciencias Químico Biológicas.<br />
-                Universidad de las Américas Puebla.</i></td>
+                Universidad de las Américas Puebla.</i></a></td>
       </tr>
 
       <tr>
