Nikola auto commit.
Source commit: 4c405a48af7fadf469564cc8fefbfcaf6f646864
Nikola version: 7.8.9

--- a/galleries/index.html
+++ b/galleries/index.html
@@ -85,16 +85,16 @@
 <noscript>
 <ul class="thumbnails">
 <li>
+<a href="Logo_HIMFG.jpg" class="thumbnail image-reference" title="Logo himfg">
+            <img src="Logo_HIMFG.thumbnail.jpg" alt="Logo himfg"></a>
+        </li>
+<li>
 <a href="Cover.png" class="thumbnail image-reference" title="Cover">
             <img src="Cover.thumbnail.png" alt="Cover"></a>
         </li>
 <li>
 <a href="Logo_UIBCDF.png" class="thumbnail image-reference" title="Logo uibcdf">
             <img src="Logo_UIBCDF.thumbnail.png" alt="Logo uibcdf"></a>
-        </li>
-<li>
-<a href="Logo_HIMFG.jpg" class="thumbnail image-reference" title="Logo himfg">
-            <img src="Logo_HIMFG.thumbnail.jpg" alt="Logo himfg"></a>
 </li>
 </ul>
 </noscript>
@@ -114,7 +114,7 @@
     moment.locale("es");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}, {"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}];
+jsonContent = [{"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}, {"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
