--- a/invitados/index.html
+++ b/invitados/index.html
@@ -139,7 +139,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="../images/icon_person.png" style="height:180px;">
+                            <img src="../images/invitados/dominguez-ramirez.jpg" style="height:180px;">
 </center>
                     </div>
                 </div>
@@ -151,6 +151,8 @@ En orden de aparición
                             <h3> Dr. Lenin Domínguez Ramírez</h3>
                             <h5> Ciencias Químico Biológicas.</h5>
                             <h5> Universidad de las Américas Puebla.</h5>
+                            <h5> <i> <a href="dominguez-ramirez/"> Semblanza Curricular </a></i>
+</h5>
                         </center>
                     </div>
                 </div>
