--- a/pages/invitados/dominguez-ramirez.html
+++ b/pages/invitados/dominguez-ramirez.html
@@ -18,7 +18,7 @@
                 <div class="panel panel-default" style="">
                     <div class="panel-body">
                         <center>
-                            <img src="/images/invitados/dominguez-ramirez.jpg", style="">
+                            <img src="/images/invitados/dominguez-ramirez.png", style="">
                             <p style="text-align:left; padding:1cm 1cm 0cm">
                                 researchgate: <a href="https://www.researchgate.net/profile/Lenin_Dominguez">Lenin_Dominguez</a> </p>
                         </center>
