Nikola auto commit.
Source commit: 6e896b9504ba59b3dd21b1e673e94130d7a52ed8
Nikola version: 7.8.9

--- a/invitados/index.html
+++ b/invitados/index.html
@@ -139,7 +139,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="../images/invitados/dominguez-ramirez.jpg" style="height:180px;">
+                            <img src="../images/invitados/dominguez-ramirez.png" style="height:180px;">
 </center>
                     </div>
                 </div>
