Correccion del aforo

--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,8 @@
     <b>¡Regístrate ya!</b><br />
 </h1>
 <h3>
-    La asistencia es gratuita.
+    La asistencia es gratuita. <br />
+    Aforo limitado a 120 participantes.
 </h3>
 </a>
 </div>
