Correccion del aforo

--- a/pages/index.html
+++ b/pages/index.html
@@ -36,7 +36,7 @@
 </h1>
 <h3>
     La asistencia es gratuita. <br />
-    Aforo limitado a 120 participantes.
+    <h4> Aforo limitado a 120 participantes.</h4>
 </h3>
 </a>
 </div>
