Nikola auto commit.
Source commit: 99e604bbfde0783dfb1ca1df4a877d46a45432d4
Nikola version: 7.8.9

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
     <b>¡Regístrate ya!</b><br>
 </h1>
 <h3>
-    La asistencia es gratuita. <br>
-    Aforo limitado a 120 participantes.
+    La asistencia es gratuita. <br><h4> Aforo limitado a 120 participantes.</h4>
 </h3>
 </a>
 </div>
