--- a/pages/invitados/index.html
+++ b/pages/invitados/index.html
@@ -101,7 +101,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="/images/icon_person.png", style="height:180px;">
+                            <img src="/images/invitados/pastor-colon.png", style="height:180px;">
                         </center>
                     </div>
                 </div>
@@ -113,6 +113,7 @@ En orden de aparición
                             <h3> Dra. Nina Pastor Colón</h3>
                             <h5> Centro de Investigación en Dinámica Celular.</h5>
                             <h5> Universidad Autónoma del Estado de Morelos.</h5>
+                            <h5> <i> <a href="/invitados/pastor-colon/"> Semblanza Curricular </a></i></h5>
                         </center>
                     </div>
                 </div>
