--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -74,9 +74,10 @@
         <td>12.10-12.55</td>
         <td>Conferencia 3</td>
         <td><strong>The TATA binding protein (TBP) as a target to attack parasites and vectors by stopping transcription.</strong><br />
+            <a href="/invitados/pastor-colon/">
             Dra. Nina Pastor Colón.<br />
             <i>Centro de Investigación en Dinámica Celular.<br />
-                Universidad Autónoma del Estado de Morelos.</i></td>
+                Universidad Autónoma del Estado de Morelos.</i></a></td>
 
       </tr>
 
