--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
 </div>
 </div>
 
+
+
+<hr>
+<h1><strong>Patrocinan</strong></h1>
+<div class="row">
+    <div class="col-md-6" style="margin-top: 4em; margin-bottom: 4em;">
+        <a href="http://malvernpanalytical.com/" style="color:inherit; text-decoration:none">
+            <img class="img-responsive" src="images/logos/patrocinadores/LogoMalvernPanalytical.jpg" style="width:60%;"></a>
+    </div>
+    <div class="col-md-6" style="margin-top: 8em; margin-bottom: 4em;">
+    </div>
+</div>
+
+
+
 <hr>
 <h1><strong>Organizan</strong></h1>
 <div class="row">
