--- a/galleries/index.html
+++ b/galleries/index.html
@@ -18,6 +18,10 @@
         width: 100%;
     }
     </style>
+<meta property="og:title" content="D3 México Workshop">
+<meta property="og:image" content="http://example.com/images/flyer_d3mexico.png">
+<meta property="og:description" content="Workshop Drug Design and Discovery - México: Impulsando la vinculación Institutos-Universidades-Empresas.">
+<meta property="og:url" content="http://www.d3mexico.org">
 </head>
 <body>
 <a href="#content" class="sr-only sr-only-focusable">Ir al contenido principal</a>
