--- a/invitados/index.html
+++ b/invitados/index.html
@@ -36,10 +36,7 @@ En orden de aparición
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@uibcdf">
 <meta name="twitter:creator" content="@uibcdf">
-<meta property="og:title" content="D3 México Workshop">
-<meta property="og:image" content="http://example.com/images/flyer_d3mexico.png">
-<meta property="og:description" content="Workshop Drug Design and Discovery - México: Impulsando la vinculación Institutos-Universidades-Empresas.">
-<meta property="og:url" content="http://www.d3mexico.org">
+<meta property="og:image" content="http://www.d3mexico.org/images/flyer_d3mexico.png">
 </head>
 <body>
 <a href="#content" class="sr-only sr-only-focusable">Ir al contenido principal</a>
