--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
         <a href="http://malvernpanalytical.com/" style="color:inherit; text-decoration:none">
             <img class="img-responsive" src="images/logos/patrocinadores/LogoMalvernPanalytical.jpg" style="width:60%;"></a>
     </div>
-    <div class="col-md-6" style="margin-top: 8em; margin-bottom: 4em;">
+    <div class="col-md-6" style="margin-top: 4em; margin-bottom: 4em;">
+        <a href="https://www.ctr.com.mx/" style="color:inherit; text-decoration:none">
+            <img class="img-responsive" src="images/logos/patrocinadores/logoctr.jpg" style="width:55%;"></a>
     </div>
 </div>
 
