Corrección a versión del brochure con objetivos modificados

--- a/pages/objetivos.html
+++ b/pages/objetivos.html
@@ -62,7 +62,7 @@
             </ul>
 
             <ul>
-                <li style="text-align:justify;font-size:16px">Fomentar un ámbito de networking en el que pueda cristalizar un sentimiento de comunidad e impulsar la articulación de herramientas para la resolución de problemas comunes y el fomento de una identidad colectiva: Workspace de Slack “D3 México (Drug Design and Discovery)”, MeetUps “D3 México” y red nacional temática.</li>
+                <li style="text-align:justify;font-size:16px">Fomentar un ámbito de networking en el que pueda cristalizar un sentimiento de comunidad e impulsar la articulación de herramientas para la resolución de problemas comunes y el fomento de una identidad colectiva: Workspace de Slack “D3 México (Drug Design and Discovery)”, MeetUps “D3 México”...</li>
             </ul>
 
         </center>
