--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -112,10 +112,11 @@
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br />
             <br />
-            Participantes:<br />
+            Participantes (Laboratorios socios de la fundación INCIDE):<br />
             <strong>
             <a href="/invitados/senosiain-pelaez/">
                 Dr. Juan Pablo Senosiain, Laboratorios Senosiain.</a><br />
+                Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br />
                 Dr. Jorge González Canudas, Laboratorios Silanes.<br />
                 Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br />
             </strong>
